--- a/src/aoc/2024.md
+++ b/src/aoc/2024.md
@@ -2,6 +2,10 @@
 
 This contains tasks from the [year 2024](https://adventofcode.com/2024). Go back to [AOC](../adventofcode.md).
 
+### Info
+
+In this years advent of code I will try to use `go` programming languange to solve all problems. Lets see how far I will get by doing so.
+
 ### Days
 
 - [Day 1](2024-1.md)
