updated aoc informations

--- a/src/aoc/2015-5.md
+++ b/src/aoc/2015-5.md
@@ -2,7 +2,7 @@
 
 This is a solution of the [day 5](https://adventofcode.com/2015/day/5). Go back to year [2015](2015.md). Go back to [AOC](../adventofcode.md).
 
-### Info
+### Information
 
 #### Part 1
 
