--- a/src/aoc/2016-4.md
+++ b/src/aoc/2016-4.md
@@ -2,7 +2,7 @@
 
 This is a solution of the [day 4](https://adventofcode.com/2016/day/4). Go back to year [2016](2016.md). Go back to [AOC](../adventofcode.md).
 
-### Info
+### Information
 
 #### Part 1
 
