--- a/src/aoc/2023-19.md
+++ b/src/aoc/2023-19.md
@@ -2,7 +2,7 @@
 
 This is a solution of the [day 19](https://adventofcode.com/2023/day/19). Go back to year [2023](2023.md). Go back to [AOC](../adventofcode.md).
 
-### Info
+### Information
 
 The main key was to parse properly the given input. That is why the code today is pretty long.
 
