--- a/src/aoc/2024-1.md
+++ b/src/aoc/2024-1.md
@@ -2,7 +2,7 @@
 
 This is a solution of the [day 1](https://adventofcode.com/2024/day/1). Go back to year [2024](2024.md). Go back to [AOC](../adventofcode.md).
 
-### Info
+### Information
 
 #### Part 1
 
