--- a/src/aoc/2015-3.md
+++ b/src/aoc/2015-3.md
@@ -2,7 +2,7 @@
 
 This is a solution of the [day 3](https://adventofcode.com/2015/day/3). Go back to year [2015](2015.md). Go back to [AOC](../adventofcode.md).
 
-### Info
+### Information
 
 #### Part 1
 
