--- a/src/aoc/2017-2.md
+++ b/src/aoc/2017-2.md
@@ -2,7 +2,7 @@
 
 This is a solution of the [day 2](https://adventofcode.com/2017/day/2). Go back to year [2017](2017.md). Go back to [AOC](../adventofcode.md).
 
-### Info
+### Information
 
 #### Part 1
 
