--- a/src/aoc/2023-20.md
+++ b/src/aoc/2023-20.md
@@ -2,7 +2,7 @@
 
 This is a solution of the [day 20](https://adventofcode.com/2023/day/20). Go back to year [2023](2023.md). Go back to [AOC](../adventofcode.md).
 
-### Info
+### Information
 
 #### Part 1
 
