--- a/src/aoc/2023-25.md
+++ b/src/aoc/2023-25.md
@@ -2,7 +2,7 @@
 
 This is a solution of the [day 25](https://adventofcode.com/2023/day/25). Go back to year [2023](2023.md). Go back to [AOC](../adventofcode.md).
 
-### Info
+### Information
 
 #### Part 1
 
