added link to go.dev

--- a/src/aoc/2024.md
+++ b/src/aoc/2024.md
@@ -4,7 +4,7 @@ This contains tasks from the [year 2024](https://adventofcode.com/2024). Go back
 
 ### Information
 
-In this years advent of code I will try to use `go` programming languange to solve all problems. Lets see how far I will get by doing so.
+In this years advent of code I will try to use `go` [programming languange](https://go.dev) to solve all problems. Lets see how far I will get by doing so.
 
 Beside solving each problem I will be focusing on the readibility of the code.
 
