added another solution

--- a/src/aoc/2024.md
+++ b/src/aoc/2024.md
@@ -11,3 +11,4 @@ Beside solving each problem I will be focusing on the readibility of the code.
 ### Days
 
 - [Day 1](2024-1.md)
+- [Day 2](2024-2.md)
