--- a/src/aoc/2024.md
+++ b/src/aoc/2024.md
@@ -8,6 +8,8 @@ In this years advent of code I will try to use `go` [programming languange](http
 
 Beside solving each problem I will be focusing on the readibility of the code.
 
+![Gopher this is fine](https://raw.githubusercontent.com/MariaLetta/free-gophers-pack/master/illustrations/png/2.png)
+
 ### Days
 
 - [Day 1](2024-1.md)
